Products.CMFDefault Changelog
=============================

2.3.0 (unreleased)
------------------

- RegistrationTool: Improved 'mailPassword' and 'registeredNotify' methods.
  Mail templates can now be views. 'mail_password_response' is no longer
  required, using the return value of 'mailPassword' is deprecated.

- PropertiesTool: Fixed editing single properties.

- browser views: Fixed zope.formlib 4.1 compatibility.

- Add 'locales' as extras_require in setup.py, with dependency on
  zope.app.locales.


2.3.0-beta2 (2012-03-31)
------------------------

- skins and upgrade: Fixed broken reconfig_form.
  Added upgrade step for fixing site properties corrupted by that form.


2.3.0-beta (2012-03-21)
-----------------------

- tools: Converted all tools into local utilities.

- skins and browser views: setRedirect now checks Action conditions.

- Actions: Added 'global/members_register' Action for redirects.
  It is similar to 'user/join', but adjusted for user managers.

- MemberDataTool: Changed property modes to 'w' and added 'fullname' property.

- File and Image: Made sure `id` is always an attribute and not a method.
  Some old instances use `__name__` instead of `id`. Use getId() to get always
  the correct ID.

- DublinCore: 'getMetadataHeaders' now returns the Type ID, not the Type title.
  This avoids conflicts between unicode messages and encoded non-ASCII strings.

- Only test reStructuredText functionality under Zope 2.13 and before.

- Document: Improved 'manage_FTPget' method.
  HTML responses can now be rendered by a view.

- Removed ``five.formlib`` dependency. ``zope.formlib`` is now used directly.

- profiles: Added default settings for the member data tool.

- upgrade: Added upgrade step for member data tool settings.

- skins and browser views: Fixed 'login_time' handling.
  Should be working with string and DateTime values because the MemberDataTool
  settings might be inconsistent.

- browser views: Added SettingsEditFormBase.