@@ -1,0 +1,9 @@
+<tal:page i18n:domain="cmf_default"
+><tal:span i18n:translate="">Your password: <tal:span i18n:name="password"
+    tal:content="view/password | default">baz</tal:span></tal:span>
+
+<tal:span i18n:translate="">Request made by IP <tal:span i18n:name="ip"
+    tal:define="ip python:request.HTTP_X_FORWARDED_FOR or request.REMOTE_ADDR"
+    tal:content="ip" /> at <tal:span i18n:name="time"
+    tal:content="context/ZopeTime" /></tal:span>
+</tal:page>
