@@ -1,0 +1,37 @@
+<tal:page i18n:domain="cmf_default"
+><tal:span i18n:translate=""
+>You have been registered as a member of "<tal:span i18n:name="portal_title"
+   tal:content="view/portal_title" />", which
+allows you to personalize your view of the website and participate in the
+community.</tal:span>
+<tal:case tal:condition="view/portal_description">
+<tal:span i18n:translate=""
+>This describes the purpose of the website:</tal:span>
+
+<tal:span tal:content="view/portal_description" />
+</tal:case>
+<tal:span i18n:translate=""
+>Visit us at <tal:span i18n:name="portal_url"
+   tal:content="view/portal_url" /></tal:span>
+
+<tal:span i18n:translate=""
+>Here is your login data (mind upper and lower case):</tal:span>
+
+<tal:span i18n:translate=""
+>Member ID</tal:span>: <tal:span tal:content="view/member_id" />
+<tal:span i18n:translate=""
+>Password</tal:span>: <tal:span tal:content="view/password" />
+
+<tal:span i18n:translate=""
+>You can use this URL to log in:</tal:span>
+
+<tal:span tal:content="view/login_url" />
+<tal:case tal:condition="python:len(view.login_url)>70">
+<tal:span i18n:translate=""
+>Be aware that this URL might wrap over two lines. If your browser shows an
+error message when you try to access the URL please make sure that you put
+in the complete string.</tal:span>
+</tal:case>
+
+<tal:span tal:content="view/signature" />
+</tal:page>
